...
            <Ionicons 
              name={focused ? 'beer' : 'beer-outline'} 
              size={24} 
              color={color} 
            />
          ),
          tabBarButtonTestID: 'tab-bar-tavern',
        }}
      />
      <Tabs.Screen
        name="profiles"
        options={{
          title: 'Profiles',
...
                  borderRadius: 4,
                  backgroundColor: Colors.error,
                }} />
              )}
            </View>
          ),
          tabBarButtonTestID: 'tab-bar-messages',
        }}
      />
      <Tabs.Screen
        name="account"
        options={{
          title: 'Account',
...
